src/styles/elements/_facet-details.css
.facet-details {
    --details-width: 100%;
    --toujou-details-summary-padding: 0 0 var(--toujou-solr-checkbox-padding);
    --toujou-details-content-padding: 0 0 var(--toujou-solr-checkbox-padding);
    --toujou-details-border-bottom: var(--border-width-normal) solid var(--border-color-default);

    --facet-details-border: none;
    --facet-details-summary-justify-content: space-between;

    border: var(--facet-details-border);
    padding-bottom: 0;
}

.facet-details + .facet-details {
    --details-margin: 0;

    border-top: none;
    padding-top: 0;
}

.facet-details__summary::after {
    display: none;
}

.facet-details__summary {
    justify-content: var(--facet-details-summary-justify-content);
}

.facet-details .solr-details__item-group {
    padding-top: 0;
}

.facet-details .facet-details {
    margin-left: 0;
    padding-left: var(--toujou-solr-filter-sub-level-indentation);
    width: 100%
}

.facet-details .facet-details .facet-details__summary {
    padding: var(--toujou-details-summary-padding);
}

.facet-details .facet-details .solr-details__item-group {
    padding-left: var(--toujou-solr-filter-sub-level-indentation)
}

.facet-details > .list-group-item > .facet-details + .list-group-item {
    padding-top: calc(var(--spacing-s) * 1.5);
}

